# linera-wallet

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  NOTICE  README.md  apollo.config.js  graphql-codegen.ts  how_to_call_a_extension.md  index.html  package.json  quasar.config.js  tsconfig.json
.github/workflows/: test.yml
.quasar/: app.js  artifacts.json  client-entry.js  client-prefetch.js  quasar-user-options.js
agents/: README.md  index.yaml
agents/context/: current-capabilities.md  doc-standard.md  project-rules.md  system-map.md
agents/primitives/: data-sources-and-state.md  identity-and-wallet-ownership.md  microchain-and-block-execution.md  rpc-and-approval-flow.md
agents/runbooks/: bug-investigation.md  local-development.md  testing.md
agents/skills/: README.md  release-bex-package.md
agents/tasks/: board.yaml
docs/: _navbar.md  _sidebar.md  index.html
docs/assets/: main.css
docs/en_US/: README.md  checko.md
docs/zh_CN/: _sidebar.md
docs/zh_CN/checko/: checko-wallet.md
extension/: dom.ts
scripts/: create-release.sh
src/: App.vue  eth-json-rpc-filters.d.ts  graphql.d.ts  index.template.html  linera-wasm-bg.d.ts  vuexshim.d.ts  wasm.d.ts  window.d.ts
src-bex/: background.ts  bex-flag.d.ts  const.ts  content.ts  dom.ts  manifest.json  my-content-script.ts  runtime-guards.ts
src-bex/bridge/: index.ts
src-bex/bridge/rpc/: index.ts  pending_blob.ts
src-bex/content/subscription/: subscription.ts
src-bex/controller/: app-state.ts
src-bex/engine/: engine.ts  index.ts
src-bex/event/: basebridge.ts  index.ts
src-bex/manager/: installationmanager.ts  notification-manager.ts  notificationmanager.ts
src-bex/microchain/: block.ts  index.ts  sentinel.ts
src-bex/middleware/: confirmation.ts  index.ts  rpc.ts  rpcpreinterceptor.ts  subscription.ts  types.ts
src-bex/middleware/rpcimpl/: ethgetbalance.ts  ethrequestaccounts.ts  getproviderstate.ts  index.ts  lineragraphqldo.ts  ping.ts  types.ts
src-bex/store/: index.ts  shared.ts
src-bex/subscription/: subscription.ts
src/apollo/: apollo-client-config.js  apollo-client-hooks.js  index.ts
src/assets/: index.ts
src/boot/: apollo.ts  notify-defaults.ts  pinia.ts
src/bridge/: index.ts
src/bridge/db/: activity.ts  application.ts  application_creator_chain_subscription.ts  chain_operation.ts  device_fingerprint.ts  index.ts  login_timestamp.ts  microchain.ts  microchain_fungible_token_balance.ts  microchain_owner.ts  microchain_owner_fungible_token_balance.ts  named_application.ts  network.ts  origin_rpc_microchain.ts  owner.ts  owner_balance.ts  password.ts  rpc_auth.ts  token.ts
src/bridge/rpc/: account.ts  ams_application_operation.ts  application.ts  application_creator_chain.ts  application_operation.ts  blob_gateway_application_operation.ts  block.ts  block_material.ts  erc20_application_operation.ts  executed_block.ts  genesis_info.ts  index.ts  meme_application_operation.ts  microchain.ts  mono_application_opeartion.ts  operation.ts  pending_blob.ts  pending_message.ts  simulate_execute_block.ts  swap_application_operation.ts
src/components/: AccountInfo.vue  AccountList.vue  AccountLoader.vue  Accounts.vue  Activity.vue  ChangeSetting.vue  ClearAccounts.vue  ClearPassword.vue  CreateAccount.vue  CreateTransfer.vue  ExportAccounts.vue  ExtensionKeepAlived.vue  HeaderMenu.vue  ImportAccount.vue  ImportWallet.vue  InitializeAccount.vue  InitializeWallet.vue  InputPassword.vue  LoginPassword.vue  Microchains.vue  NewPassword.vue  OnBoarding.vue  OpenChain.vue  OpenExtension.vue  RecoveryWallet.vue  SidebarMenu.vue  StoreLoader.vue  TestnetTip.vue  ValidateAccount.vue  VerifyPassword.vue  WalletSetting.vue
src/components/account/: AccountDetailAvatarView.vue  AccountDetailInnerView.vue  AccountDetailView.vue  AccountsInnerView.vue  AccountsView.vue  ClearAccounts.vue  CreateAccount.vue  GenerateKey.vue  GenerateKeyView.vue  ImportMnemonicView.vue  ImportPrivateKeyInnerView.vue  ImportPrivateKeyMenuView.vue  ImportPrivateKeyView.vue  InitializeAccount.vue  ShowPrivateKeyConfirmView.vue  ShowPrivateKeySecurityConfirmView.vue  ShowPrivateKeyView.vue  ValidateAccount.vue
src/components/activity/: ActivitiesView.vue  ActivityCardView.vue  ActivityDetailView.vue  ChainOperationCardView.vue  ChainOperationDetailView.vue  ChainOperationsView.vue
src/components/application/: ApplicationCardView.vue  ApplicationsView.vue
src/components/block/: BlockView.vue  ConstructBlock.vue
src/components/bridge/: MicrochainBridge.vue  MicrochainOwnerBridge.vue  NetworkBridge.vue  OwnerBridge.vue  PasswordBridge.vue
src/components/extension/: Activity.vue  CheckboxView.vue  CreateTransfer.vue  FooterMenu.vue  HeaderMenu.vue  ImportAccount.vue  InitializeAccount.vue  Microchains.vue  MutationInfoView.vue  NewPassword.vue  OnBoarding.vue  PopupHeader.vue  PupupHeader.vue  SignInfoView.vue  ValidateAccount.vue  (+1 more)
src/const/: constant.ts  domain.ts  index.ts
src/controller/: db.ts
src/crypto/: index.ts
src/css/: app.sass  quasar.variables.scss
src/graphql/: application.ts  erc20.ts  faucet.ts  index.ts  meme.ts  meme_raw.ts  service.ts
src/helper/: activity.ts  balance.ts  block.ts  chain_operation.ts  index.ts  microchain.ts
src/i18n/: index.ts
src/layouts/: ExtensionMainLayout.vue  MainLayout.vue
src/localstores/: index.ts
src/model/: index.ts  model.ts
src/pages/: AccountInfoPage.vue  AccountsPage.vue  ActivityPage.vue  HomePage.vue  ImportWalletPage.vue  ImprovementPage.vue  IndexPage.vue  InitializeWalletPage.vue  LaunchPage.vue  MicrochainsPage.vue  OnBoardingPage.vue  RecoveryPage.vue  ResetWalletPage.vue  SettingPage.vue  TransferPage.vue
src/router/: index.ts  routes.ts
src/types/: index.ts  types.ts
src/utils/: copycontent.ts  endpoint.ts  graphql_result.ts  hex.ts  index.ts  shortid.ts  verify.ts
src/worker/: index.ts
wasm/: Cargo.toml  rust-toolchain.toml
wasm/src/: config.rs  fake_meme.rs  fake_service.rs  genesis_config.rs  lib.rs  options.rs  signed_block.rs  wallet.rs
(+174 files in other folders)
