[package]
name = "linera-wasm"
description = "The Linera Web client"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"
repository = "https://github.com/respeer-ai/linera-wallet.git"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
anyhow = "1.0.82"
console_log = "1.0.0"
log = "0.4.21"
nonzero_lit = "0.1.2"
serde = "=1.0.205"
serde-reflection = "0.4.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
rand = "0.8.5"
chrono = "0.4.38"
tokio = "1.38.0"
local-encoding = "0.2.0"
rand_chacha = "0.3.1"
serde_path_to_error = "0.1.16"
bcs = "0.1.6"
async-graphql = "=7.0.2"
wasmtimer = "0.4.1"
web-time = "1.1.0"

[dependencies.bip39]
git = "https://github.com/rust-bitcoin/rust-bip39.git"
version = "2.1.0"
features = [ "rand" ]

[dependencies.linera-base]
path = "./linera-protocol/linera-base"
features = ["web"]

[dependencies.linera-chain]
path = "./linera-protocol/linera-chain"
features = ["web"]

[dependencies.linera-client]
path = "./linera-protocol/linera-client"
default-features = false
features = ["web"]

[dependencies.linera-core]
path = "./linera-protocol/linera-core"
features = ["web", "wasmer"]

[dependencies.linera-execution]
path = "./linera-protocol/linera-execution"
features = ["web", "wasmer"]

[dependencies.linera-faucet-client]
path = "./linera-protocol/linera-faucet/client"

[dependencies.linera-rpc]
path = "./linera-protocol/linera-rpc"
features = ["web"]

[dependencies.linera-storage]
path = "./linera-protocol/linera-storage"
features = ["web", "wasmer"]

[dependencies.linera-views]
path = "./linera-protocol/linera-views"
features = ["web", "indexeddb"]

[dependencies.spec]
path = "./linera-dapps/spec"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
]

[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
schemars = "*"

[patch.crates-io.ed25519-dalek]
version = "2.1.1"
git = "https://github.com/respeer-ai/curve25519-dalek"
branch = "respeer-pub-field-1efe6a93"

[features]
default = ["no-storage"]
no-storage = ["linera-client/no-storage"]

[patch.crates-io.wasm_thread]
git = "https://github.com/Twey/wasm_thread"
branch = "post-message"
