[package]
name = "linera-wasm"
description = "The Linera Web client"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"
repository = "https://github.com/respeer-ai/linera-wallet.git"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3"
wasm-bindgen-futures = "=0.4.50"
console_error_panic_hook = "0.1.6"
anyhow = "1.0.82"
console_log = "1.0.0"
log = "0.4.21"
nonzero_lit = "0.1.2"
serde = "^1.0.205"
serde-reflection = "0.4.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
rand = "0.8.5"
chrono = "0.4.38"
tokio = "1.38.0"
local-encoding = "0.2.0"
rand_chacha = "0.3.1"
serde_path_to_error = "0.1.16"
bcs = "0.1.6"
async-graphql = "=7.0.17"
wasmtimer = "0.4.1"
web-time = "1.1.0"
tracing = "0.1.40"

[dependencies.bip39]
git = "https://github.com/rust-bitcoin/rust-bip39.git"
version = "2.1.0"
features = [ "rand" ]

[dependencies.linera-base]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web"]

[dependencies.linera-chain]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web"]

[dependencies.linera-client]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web"]
default-features = false

[dependencies.linera-core]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web", "wasmer"]

[dependencies.linera-execution]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web", "wasmer"]

[dependencies.linera-faucet-client]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"

[dependencies.linera-rpc]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web"]

[dependencies.linera-storage]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web", "wasmer"]

[dependencies.linera-views]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
features = ["web", "indexeddb"]

[dependencies.abi]
git = "https://github.com/respeer-ai/linera-meme.git"
rev = "d38f06f"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
]

[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
schemars = "*"

[features]
default = []

[patch.crates-io.wasm_thread]
git = "https://github.com/Twey/wasm_thread"
branch = "post-message"

[patch.crates-io.indexed_db_futures]
version = "0.4.1"
git = "https://github.com/Twey/rust-indexed-db"
branch = "no-uuid-wasm-bindgen"

[patch.crates-io.linera-sdk]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"

[patch.crates-io.linera-views]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "8ef28c97"
